objects/Concert__c.object
<CustomObject>
    <fields>
        <fullName>Concert_Details__c</fullName>
        <label>Concert Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Concert_Name__c</fullName>
        <label>Concert Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concert_Type__c</fullName>
        <label>Concert Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Concert</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Concert_View</fullName>
        <columns>NAME</columns>
        <columns>Concert_Name__c</columns>
        <columns>Concert_Type__c</columns>
        <columns>Concert_Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>Concert View</label>
    </listViews>
    <listViews>
        <fullName>Queue_1_Concert</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue 1</label>
        <queue>Queue_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Concert ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Concerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>